@@ -1,3 +1,7 @@
+Fri Sep 12 11:12:34 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* sanity.sh: Comment out call to "whoami".
+
 Thu Sep 11 10:09:04 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* commit.c (classify_file_internal): Add comment about saving
